# swagger/output.json
@@ -513,140 +513,6 @@
         }
       }
     },
-    "/api/admin/report/orderAuser": {
-      "post": {
-        "tags": [
-          "Report"
-        ],
-        "summary": "отчет по заявкам и пользователя",
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "user_id": {
-                  "example": "any"
-                },
-                "date_begin": {
-                  "example": "any"
-                },
-                "date_end": {
-                  "example": "any"
-                },
-                "is_archive": {
-                  "example": "any"
-                },
-                "is_buy": {
-                  "example": "any"
-                },
-                "is_sale": {
-                  "example": "any"
-                },
-                "is_express": {
-                  "example": "any"
-                },
-                "is_urgent": {
-                  "example": "any"
-                },
-                "is_cancel": {
-                  "example": "any"
-                },
-                "score": {
-                  "example": "any"
-                },
-                "type_buyer": {
-                  "example": "any"
-                },
-                "type_order": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/admin/report/orderAcategory": {
-      "post": {
-        "tags": [
-          "Report"
-        ],
-        "summary": "отчет по заявкам и пользователя",
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "category_id": {
-                  "example": "any"
-                },
-                "date_begin": {
-                  "example": "any"
-                },
-                "date_end": {
-                  "example": "any"
-                },
-                "is_archive": {
-                  "example": "any"
-                },
-                "is_buy": {
-                  "example": "any"
-                },
-                "is_sale": {
-                  "example": "any"
-                },
-                "is_express": {
-                  "example": "any"
-                },
-                "is_urgent": {
-                  "example": "any"
-                },
-                "is_cancel": {
-                  "example": "any"
-                },
-                "score": {
-                  "example": "any"
-                },
-                "type_buyer": {
-                  "example": "any"
-                },
-                "type_order": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/api/admin/report/user": {
       "post": {
         "tags": [
@@ -2020,6 +1886,10 @@
         "is_sale": {
           "type": "boolean",
           "example": false
+        },
+        "is_active": {
+          "type": "boolean",
+          "example": true
         },
         "is_express": {
           "type": "boolean",
